staging/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: carrental-deployment
    labels:
      app: carrental
spec:
  selector:
    matchLabels:
      app: carrental
  template:
    metadata:
      labels:
        app: carrental
    spec:
      serviceAccountName: carrental-sa
      volumes:
        - name: secrets
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: carrental-aws-secrets
      containers:
      - name: carrental
        image: tiagomadeiradock/railscarrentalsapi:2319fca
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            memory: 2048Mi
            cpu: "1"
          requests:
            memory: 256Mi
            cpu: "0.2"
        ports:
          - name: http
            containerPort: 3000
        volumeMounts:
            - name: secrets
              mountPath: /mnt/secrets
              readOnly: true
      imagePullSecrets:
      - name: regcred
      
          
                    
---
apiVersion: v1
kind: Service
metadata:
  name: carrental-internal-service
spec:
  selector:
    app: carrental
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: http
