staging/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: carrental
spec:
  rules:
  - host: staging.carrentals.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: carrental-internal-service
            port: 
              number: 3000
